[chore] Cleaned up MappingProcessor