@@ -21,12 +21,18 @@ import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.Elements;
 import javax.tools.Diagnostic;
+import javax.tools.Diagnostic.Kind;
 import javax.tools.JavaFileObject;
 import org.nexus.annotations.Mapping;
 
 @SupportedAnnotationTypes("org.nexus.annotations.Mapping")
 @SupportedSourceVersion(SourceVersion.RELEASE_25)
 public class MappingProcessor extends AbstractProcessor {
+
+  private static final String GENERATED_PACKAGE = "nexus.generated";
+  private static final String GENERATED_FILE_NAME = "GeneratedRoutes";
+  private static final String GENERATED_PACKAGE_FILE =
+      GENERATED_PACKAGE + "." + GENERATED_FILE_NAME;
 
   private Filer filer;
   private Elements elementUtils;
@@ -43,13 +49,10 @@ public class MappingProcessor extends AbstractProcessor {
 
   @Override
   public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
-    messager.printMessage(Diagnostic.Kind.NOTE, "Processor triggered, found " +
-        roundEnv.getElementsAnnotatedWith(Mapping.class).size() + " elements");
-
-    // Skip if we've already generated or if processing is over or no annotations found
-    if (hasGenerated || roundEnv.processingOver() || annotations.isEmpty()) {
-      return false;
-    }
+    messager.printMessage(
+        Diagnostic.Kind.NOTE,
+        "Processor triggered, found %s elements"
+            .formatted(roundEnv.getElementsAnnotatedWith(Mapping.class).size()));
 
     Set<? extends Element> annotatedElements = roundEnv.getElementsAnnotatedWith(Mapping.class);
 
@@ -58,33 +61,25 @@ public class MappingProcessor extends AbstractProcessor {
       return false;
     }
 
-    StringBuilder builder = new StringBuilder();
-    builder.append("package nexus.generated;\n\n")
-        .append("import org.nexus.annotations.Route;\n")
-        .append("import io.netty.channel.ChannelHandlerContext;\n")
-        .append("import io.netty.handler.codec.http.HttpRequest;\n")
-        .append("import io.netty.handler.codec.http.HttpMethod;\n")
-        .append("import java.util.*;\n")
-        .append("import java.util.stream.Collectors;\n\n")
-        .append("public class GeneratedRoutes {\n")
-        .append("    private static final Map<String, Route<?>> routeMap = new HashMap<>();\n\n")
-        .append("    static {\n")
-        .append("        try {\n")
-        .append("            initRoutes();\n")
-        .append("        } catch (IllegalStateException e) {\n")
-        .append(
-            "            throw new RuntimeException(\"Failed to initialize routes: \" + e.getMessage(), e);\n")
-        .append("        }\n")
-        .append("    }\n\n")
-        .append("    private static void initRoutes() {\n");
+    // Skip if we've already generated or if processing is over or no annotations found
+    if (hasGenerated || roundEnv.processingOver() || annotations.isEmpty()) {
+      return false;
+    }
 
-    // First pass: collect all routes to detect duplicates
+    // Two passes strategy
+    // 1st pass, collects all routes and check for duplicates
+    //    and if annotation is annotated only on methods
+    // 2nd pass, generate the routes
+
+    // 1st pass: collect all routes to detect duplicates and if annotation is only on methods
     Map<String, String> routeKeys = new HashMap<>();
     for (Element element : annotatedElements) {
       if (element.getKind() != ElementKind.METHOD) {
-        messager.printMessage(Diagnostic.Kind.WARNING,
+        messager.printMessage(
+            Kind.ERROR,
             "@Mapping annotation can only be used on methods", element);
-        continue;
+        throw new IllegalStateException(
+            "@Mapping annotation can only be used on methods. Element: %s".formatted(element));
       }
 
       ExecutableElement method = (ExecutableElement) element;
@@ -96,12 +91,43 @@ public class MappingProcessor extends AbstractProcessor {
       // Check for duplicate routes
       if (routeKeys.containsKey(routeKey)) {
         String existingMethod = routeKeys.get(routeKey);
-        throw new IllegalStateException("Duplicate route found: " + routeKey +
-            ". Already defined in " + existingMethod);
+        throw new IllegalStateException(
+            "Duplicate route found: '%s'. Already defined in '%s'"
+                .formatted(routeKey, existingMethod));
+
       }
-      routeKeys.put(routeKey,
+      routeKeys.put(
+          routeKey,
           method.getEnclosingElement().getSimpleName() + "." + method.getSimpleName());
     }
+
+    StringBuilder builder = new StringBuilder();
+    builder.append("""
+        package %s;
+        
+        import org.nexus.annotations.Route;
+        import io.netty.channel.ChannelHandlerContext;
+        import io.netty.handler.codec.http.HttpRequest;
+        import io.netty.handler.codec.http.HttpMethod;
+        import java.util.*;
+        import java.util.stream.Collectors;
+        
+        public class %s {
+          private static final Map<String, Route<?>> routeMap = new HashMap<>();
+        
+          static {
+            try {
+              initRoutes();
+            } catch (IllegalStateException e) {
+              throw new RuntimeException("Failed to initialize routes: " + e.getMessage(), e);
+            }
+          }
+        
+          private static void initRoutes() {
+        """.formatted(
+        GENERATED_PACKAGE,
+        GENERATED_FILE_NAME
+    ));
 
     // Second pass: generate the route map
     for (Element element : annotatedElements) {
@@ -123,51 +149,65 @@ public class MappingProcessor extends AbstractProcessor {
 
       if (returnType.toString().startsWith("org.nexus.Response<")) {
         String genericPart = returnType.toString();
-        responseTypeArg = genericPart.substring("org.nexus.Response<".length(),
-            genericPart.length() - 1);
+        responseTypeArg =
+            genericPart.substring("org.nexus.Response<".length(), genericPart.length() - 1);
       }
 
       String paramCode = "";
       List<? extends VariableElement> parameters = method.getParameters();
       if (!parameters.isEmpty()) {
-        VariableElement param = parameters.get(0);
+        VariableElement param = parameters.getFirst();
         String paramName = param.getSimpleName().toString();
-        paramCode = "            String " + paramName + " = params.get(\"" + paramName + "\");\n";
+        paramCode = "String " + paramName + " = params.get(\"" + paramName + "\");\n";
       }
 
-      builder.append("        routeMap.put(").append(routeKey).append(", ")
-          .append("new Route<")
-          .append(responseTypeArg).append(">(")
-          .append(httpMethod).append(", \"")
-          .append(endpoint).append("\", (ctx, req, params) -> {\n")
-          .append(paramCode)
-          .append("            ").append(className).append(" controller = new ")
-          .append(className).append("();\n")
-          .append("            return controller.").append(methodName)
-          .append("(").append(parameters.isEmpty() ? "" : parameters.getFirst().getSimpleName())
-          .append(");\n")
-          .append("        }));\n");
+      builder.append("""
+              routeMap.put(
+                %s,
+                new Route<%s>(%s, "%s", (ctx, req, params) -> {
+                  %s %s controller = new %s();
+                  return controller.%s(%s);
+                }));
+          """.formatted(
+          routeKey,
+          responseTypeArg,
+          httpMethod,
+          endpoint,
+          paramCode.trim(),
+          className,
+          className,
+          methodName,
+          parameters.isEmpty() ? "" : parameters.getFirst().getSimpleName()
+      ));
     }
 
-    builder.append("    }\n\n")
-        .append("    public static Route<?> getRoute(String method, String path) {\n")
-        .append("        return routeMap.get(method + \" \" + path);\n")
-        .append("    }\n\n")
-        .append("    public static List<Route<?>> getRoutes() {\n")
-        .append("        return new ArrayList<>(routeMap.values());\n")
-        .append("    }\n")
-        .append("}\n");
+    builder.append("""
+          }
+        
+          public static Route<?> getRoute(String method, String path) {
+            return routeMap.get(method + " " + path);
+          }
+        
+          public static List<Route<?>> getRoutes() {
+            return new ArrayList<>(routeMap.values());
+          }
+        }
+        """);
 
     try {
-      JavaFileObject sourceFile = filer.createSourceFile("nexus.generated.GeneratedRoutes");
+      JavaFileObject sourceFile = filer.createSourceFile(GENERATED_PACKAGE_FILE);
       try (PrintWriter writer = new PrintWriter(sourceFile.openWriter())) {
         writer.write(builder.toString());
       }
+
       hasGenerated = true;  // Mark as generated
-      messager.printMessage(Diagnostic.Kind.NOTE, "GeneratedRoutes.java created successfully");
+      messager.printMessage(
+          Diagnostic.Kind.NOTE,
+          "GeneratedRoutes.java created successfully");
     } catch (Exception e) {
-      messager.printMessage(Diagnostic.Kind.ERROR, "Failed to generate file: " + e.getMessage());
-      e.printStackTrace();
+      messager.printMessage(
+          Diagnostic.Kind.ERROR,
+          "Failed to generate file: " + e.getMessage());
     }
 
     return true;
